# ai-ethics-agent

./: .gitignore  README.md  agent.py  app.py  prompts.yaml  pyproject.toml  requirements.txt  streamlit_app.py
reports/: sample_eval.md
