[project]
name = "ai-ethics-agent"
version = "0.1.0"
description = "Streamlit app to evaluate AI use cases for ethical risk"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "streamlit",
  "openai",
  "langchain",
  "langchain-openai",
  "python-dotenv",
  "python-docx",
  "reportlab",
  "pypandoc",
  "pyyaml"
]

